# Vault69

./: Dockerfile.armv7  Dockerfile.gtk-arm  bun.lockb  index.html  package.json  pnpm-lock.yaml  vite.config.js
.cargo/: config.toml
src/: App.css  App.jsx  Loss.jsx  Terminal.jsx  Win.jsx  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/handlers/: server.rs
