[package]
name = "vault69"
version = "0.1.0"
description = "A Tauri app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
